Pass attributes to merged resources after temporal contextualization